--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "movie-catalog",
+  "homepage": "http://cviterales.github.io/movie-to-night",
+  "name": "movie-to-night",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^16.13.1",
