--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "gh-pages": "^3.1.0",
     "moment": "^2.29.1",
     "node-sass": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^3.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "styled-components": "^5.2.1"
   },
   "scripts": {
     "predeploy": "npm run build",
